[gd_scene load_steps=4 format=3 uid="uid://c0pe7x1rpa6fm"]

[ext_resource type="Script" path="res://scripts/power.gd" id="1_46f8c"]
[ext_resource type="Texture2D" uid="uid://bmvm10jume4om" path="res://assets/graphics/ui/panel_power.png" id="1_lopaf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o0yed"]
texture = ExtResource("1_lopaf")
texture_margin_left = 10.0
texture_margin_top = 10.0
texture_margin_right = 10.0
texture_margin_bottom = 10.0

[node name="Power" type="Panel"]
custom_minimum_size = Vector2(240, 96)
theme_override_styles/panel = SubResource("StyleBoxTexture_o0yed")
script = ExtResource("1_46f8c")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(10, 10)
centered = false

[node name="NameLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -110.0
offset_top = 5.0
offset_right = 110.0
offset_bottom = 76.0
grow_horizontal = 2
mouse_filter = 1
theme_override_colors/font_outline_color = Color(0.0431373, 0.298039, 0.286275, 1)
theme_override_constants/outline_size = 8
bbcode_enabled = true
text = "PLACEHOLDER_NAME"
fit_content = true

[node name="EnergyLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -26.0
offset_right = 103.0
offset_bottom = -10.0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0.0431373, 0.298039, 0.286275, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 18
text = "ENERGY: Z"

[node name="UsesLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -26.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0.0431373, 0.298039, 0.286275, 1)
theme_override_constants/outline_size = 8
theme_override_font_sizes/font_size = 18
text = "USES: X / Y"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
